--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,30 @@
+article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary{display:block;}audio,canvas,video{display:inline-block;}audio:not([controls]){display:none;height:0;}[hidden]{display:none;}html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%;}a:focus{outline:thin dotted;}a:active,a:hover{outline:0;}h1{font-size:2em;}abbr[title]{border-bottom:1px dotted;}b,strong{font-weight:700;}dfn{font-style:italic;}mark{background:#ff0;color:#000;}code,kbd,pre,samp{font-family:monospace, serif;font-size:1em;}pre{white-space:pre-wrap;word-wrap:break-word;}q{quotes:\201C \201D \2018 \2019;}small{font-size:80%;}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline;}sup{top:-.5em;}sub{bottom:-.25em;}img{border:0;}svg:not(:root){overflow:hidden;}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em;}button,input,select,textarea{font-family:inherit;font-size:100%;margin:0;}button,input{line-height:normal;}button,html input[type=button],/* 1 */input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}button[disabled],input[disabled]{cursor:default;}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0;}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box;}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none;}textarea{overflow:auto;vertical-align:top;}table{border-collapse:collapse;border-spacing:0;}body,figure{margin:0;}legend,button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
+
+.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }
+
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
+
+.visuallyHidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
+
+* {
+  margin: 0;
+  padding: 0;
+  /* font-family: 'Poppins', sans-serif; */
+font-family: 'Cabin', sans-serif;
+}
+
 .App {
-  text-align: center;
+  background-image: url('assets/images/background.jpg');
+  background-size: cover;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  font-size: 1.25rem;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-spin infinite 1s linear;
   height: 40vmin;
   pointer-events: none;
 }
@@ -29,5 +50,321 @@
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+ul {
+  list-style: none;
+}
+
+button {
+  margin: 10px 0;
+  background: firebrick;
+  padding: 5px 10px;
+  border-radius: 30px;
+  border: none;
+  color: aliceblue;
+}
+
+button:hover {
+  background: orange;
+}
+
+.searchBarSection {
+  display: flex;
+  justify-content: center;
+}
+
+.searchBar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  text-align: center;
+  padding: 20px 5%;
+  margin-bottom: 20px;
+  border-radius: 30px;
+  background-color: rgba(0,0,0,0.7);
+  color: aliceblue;
+}
+
+.criteria {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+}
+
+.searchBar button {
+  width: 100px;
+  margin: 20px;
+}
+
+.searchResults {
+  text-align: center;
+  width: 80%;
+  max-width: 1600px;
+  margin: 0 auto;
+  color: aliceblue;
+  padding: 20px 0;
+}
+
+.searchList li {
+  padding: 10px 0;
+  border-top: 1px solid aliceblue;
+  background-color: rgba(0,0,0,0.7);
+}
+
+.searchList li:first-of-type {
+  border-radius: 30px 30px 0 0;
+}
+
+.searchList li:last-of-type {
+  border-radius: 0 0 30px 30px;
+}
+
+.searchList li:hover {
+  background: orange;
+  cursor: pointer;
+}
+
+.searchList li:focus,
+.searchBar button:focus {
+  background: orange;
+}
+
+[type="text"] {
+  width: 100%;
+  padding: 5px;
+}
+
+.noResults {
+  display: flex;
+  justify-content: center;
+  color: aliceblue;
+}
+
+.noStats {
+  color: aliceblue;
+}
+
+
+.teamLogo {
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  height: 100%;
+  position: relative;
+  width: 80%;
+  max-width: 1600px;
+  margin: 0 auto;
+}
+
+.player {
+  background-color: rgba(0,0,0,0.7);
+  border-radius: 30px;
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 5%;
+}
+
+.disappear {
+  visibility: hidden;
+}
+
+.playerPic {
+  width: 300px;
+  height: 300px;
+}
+
+.playerPic img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0px 0px 100px;
+}
+
+.playerStatSheet {
+  color: aliceblue;
+  font-weight: 600;
+  width: calc(100% - 375px);
+  text-shadow: 0px 0px 200px black;
+}
+
+.playerName {
+  font-size: 3rem;
+  color: lightsalmon;
+}
+
+.stats {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.stats li:first-of-type {
+  width: 100%;
+}
+
+.stat {
+  width: 200px;
+  text-transform: uppercase;
+}
+
+.ATL {
+  background-image: url('assets/images/ATL.png');
+}
+
+.BKN {
+  background-image: url('assets/images/BKN.png');
+}
+
+.BOS {
+  background-image: url('assets/images/BOS.png');
+}
+
+.CHA {
+  background-image: url('assets/images/CHA.png');
+}
+
+.CHI {
+  background-image: url('assets/images/CHI.png');
+}
+
+.CLE {
+  background-image: url('assets/images/CLE.png');
+}
+
+.DAL {
+  background-image: url('assets/images/DAL.png');
+}
+
+.DEN {
+  background-image: url('assets/images/DEN.png');
+}
+
+.DET {
+  background-image: url('assets/images/DET.png');
+}
+
+.GSW {
+  background-image: url('assets/images/GSW.png');
+}
+
+.HOU {
+  background-image: url('assets/images/HOU.png');
+}
+
+.IND {
+  background-image: url('assets/images/IND.png');
+}
+
+.LAC {
+  background-image: url('assets/images/LAC.png');
+}
+
+.LAL {
+  background-image: url('assets/images/LAL.png');
+}
+
+.MEM {
+  background-image: url('assets/images/MEM.png');
+}
+
+.MIA {
+  background-image: url('assets/images/MIA.png');
+}
+
+.MIL {
+  background-image: url('assets/images/MIL.png');
+}
+
+.MIN {
+  background-image: url('assets/images/MIN.png');
+}
+
+.NOP {
+  background-image: url('assets/images/NOP.png');
+}
+
+.NYK {
+  background-image: url('assets/images/NYK.png');
+}
+
+.OKC {
+  background-image: url('assets/images/OKC.png');
+}
+
+.ORL {
+  background-image: url('assets/images/ORL.png');
+}
+
+.PHI {
+  background-image: url('assets/images/PHI.png');
+}
+
+.PHO {
+  background-image: url('assets/images/PHO.png');
+}
+
+.POR {
+  background-image: url('assets/images/POR.png');
+}
+
+.SAC {
+  background-image: url('assets/images/SAC.png');
+}
+
+.SAS {
+  background-image: url('assets/images/SAS.png');
+}
+
+.TOR {
+  background-image: url('assets/images/TOR.png');
+}
+
+.UTA {
+  background-image: url('assets/images/UTA.png');
+}
+
+.WAS {
+  background-image: url('assets/images/WAS.png');
+}
+
+@media (max-width: 1080px) {
+  .player {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .searchBar {
+    width: 80%;
+  }
+
+  .stat,
+  .playerName {
+    width: 100%;
+    text-align: center;
+  }
+
+  .playerStatSheet {
+    width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .playerPic {
+    width: 200px;
+    height: 200px;
+  }
+
+  .criteria {
+    flex-direction: column;
+    margin: 10px 0;
+  }
+
+  .playerName {
+    font-size: 2rem;
   }
 }
