--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
 
 .visuallyHidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}
 
+/* Style for app */
 * {
   margin: 0;
   padding: 0;
@@ -28,21 +29,6 @@ article,aside,details,figcaption,figure,footer,header,hgroup,nav,section,summary
   pointer-events: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -56,17 +42,22 @@ ul {
   list-style: none;
 }
 
+/* Search Bar Component Styling */
 button {
   margin: 10px 0;
   background: firebrick;
   padding: 5px 10px;
   border-radius: 30px;
   border: none;
-  color: aliceblue;
 }
 
-button:hover {
-  background: orange;
+button,
+.noStats,
+.searchBar,
+.searchResults,
+.noResults,
+.playerStatSheet {
+  color: aliceblue;
 }
 
 .searchBarSection {
@@ -85,7 +76,6 @@ button:hover {
   margin-bottom: 20px;
   border-radius: 30px;
   background-color: rgba(0,0,0,0.7);
-  color: aliceblue;
 }
 
 .criteria {
@@ -99,12 +89,12 @@ button:hover {
   margin: 20px;
 }
 
+/* Search Result Component Styling */
 .searchResults {
   text-align: center;
   width: 80%;
   max-width: 1600px;
   margin: 0 auto;
-  color: aliceblue;
   padding: 20px 0;
 }
 
@@ -123,12 +113,14 @@ button:hover {
 }
 
 .searchList li:hover {
-  background: orange;
   cursor: pointer;
 }
 
 .searchList li:focus,
-.searchBar button:focus {
+.searchBar button:focus,
+.searchList li:hover,
+button:hover,
+#year:focus {
   background: orange;
 }
 
@@ -140,14 +132,9 @@ button:hover {
 .noResults {
   display: flex;
   justify-content: center;
-  color: aliceblue;
 }
 
-.noStats {
-  color: aliceblue;
-}
-
-
+/* Player Stats Component Styling */
 .teamLogo {
   background-size: contain;
   background-position: center;
@@ -185,7 +172,6 @@ button:hover {
 }
 
 .playerStatSheet {
-  color: aliceblue;
   font-weight: 600;
   width: calc(100% - 375px);
   text-shadow: 0px 0px 200px black;
@@ -211,6 +197,7 @@ button:hover {
   text-transform: uppercase;
 }
 
+/* Team Logos */
 .ATL {
   background-image: url('assets/images/ATL.png');
 }
@@ -331,6 +318,7 @@ button:hover {
   background-image: url('assets/images/WAS.png');
 }
 
+/* Media Queries */
 @media (max-width: 1080px) {
   .player {
     flex-direction: column;
@@ -349,6 +337,10 @@ button:hover {
 
   .playerStatSheet {
     width: 100%;
+  }
+
+  .noStats {
+    text-align: center;
   }
 }
 
